--- a/readux/collection/templates/collection/browse.html
+++ b/readux/collection/templates/collection/browse.html
@@ -1,7 +1,7 @@
 {% extends 'site_base.html' %}
 
 
-{% block page-subtitle %}Collections | {% endblock %}
+{% block page-subtitle %}{% endblock %}
 
 {% block content %}
 <div class="container">
