--- a/readux/books/templates/books/pages.html
+++ b/readux/books/templates/books/pages.html
@@ -1,6 +1,6 @@
 {% extends 'site_base.html' %}
 
-{% block page-subtitle %}{{ vol.title|truncatechars:150 }}{% if vol.volume %} [{{ vol.volume }}], {% endif %}p.{{ pages.start_index }}-{{ pages.end_index }} | {% endblock %}
+{% block page-subtitle %}{{ vol.title|truncatechars:150 }}{% if vol.volume %} [{{ vol.volume }}]{% endif %}, p.{{ pages.start_index }}-{{ pages.end_index }} | {% endblock %}
 
 {% block content %}
 <div class="container">
