--- a/readux/books/templates/books/volume.html
+++ b/readux/books/templates/books/volume.html
@@ -2,11 +2,10 @@
 
 
 {% block metadata %}
-{{ block.super }}
-<meta property="og:title" content="{{ vol.title }}"/>
-<meta property="og:image" content="{{vol.metatag_host_url}}{% url 'books:page-thumbnail' vol.primary_image %}"/>
-
-
+    {{ block.super }}
+    <meta property="og:title" content="{{ vol.title }}"/>
+    <meta itemprop="og:headline" content="{{ vol.title }}" />
+    <meta property="og:image" content="{{vol.metatag_host_url}}{% url 'books:page-thumbnail' vol.primary_image %}"/>
 {% endblock %}
 
 {% block page-subtitle %}{{ vol.title|truncatechars:150 }}{% if vol.volume %} [{{ vol.volume }}]{% endif %} | {% endblock %}
