Added twitter metadata tags to Browse and Base
[#75230428]

- Added twitter:card meta tags to browse page that will build twitter
card structure

- Appended twitter:domain meta tag to metadata block in Site Base

--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -6,6 +6,8 @@
   <meta property="og:site_name" content="Readux"/>
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{request.build_absolute_uri}}"/>
+
+  <meta name="twitter:domain" content="{{request.get_host}}">
 {% endblock %}
 
 {% block favicon %}
