--- a/readux/collection/templates/collection/browse.html
+++ b/readux/collection/templates/collection/browse.html
@@ -3,6 +3,19 @@
 
 {% block page-subtitle %}{% endblock %}
 
+{% block metadata %}
+  {{block.super}}
+  <meta name="twitter:card" content="gallery">
+  <meta name="twitter:title" content="Readux Collections">
+  <meta name="twitter:description" content="Digital archives grouped by topic or assortment">
+
+  {# TODO: build absolute url elsewhere #}
+  {% for item in meta_covers %}
+    <meta name="twitter:image{{forloop.counter0}}:src" content="{{request.build_absolute_uri}}{{ item.get__thumbnail }}">
+  {% endfor %}
+
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <header class="page-header" id="collection-header">
