Added twitter meta tags
[#75230428]

--- a/readux/books/templates/books/volume.html
+++ b/readux/books/templates/books/volume.html
@@ -6,6 +6,11 @@
     <meta property="og:title" content="{{ vol.title }}"/>
     <meta itemprop="og:headline" content="{{ vol.title }}" />
     <meta property="og:image" content="{{vol.metatag_host_url}}{% url 'books:page-thumbnail' vol.primary_image %}"/>
+
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:title" content="{{ vol.title|truncatechars:150 }}" />
+    <meta property="twitter:image" content="{{vol.metatag_host_url}}{% url 'books:page-thumbnail' vol.primary_image %}" />
+    <meta property="twitter:url" content="{{request.build_absolute_uri}}" />
 {% endblock %}
 
 {% block page-subtitle %}{{ vol.title|truncatechars:150 }}{% if vol.volume %} [{{ vol.volume }}]{% endif %} | {% endblock %}
