--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -19,6 +19,25 @@
  {% endif %}
 {% endblock %}
 
+{% block metadata %}
+    {{ block.super }}
+    <meta property="og:title" content="{{ collection.short_label }}"/>
+    <meta itemprop="og:headline" content="{{ collection.short_label }}" />
+
+    {% if collection.banner %}
+    <meta property="twitter:image" content="http://{{request.get_host}}{{collection.banner.get__blurred__banner }}"/>
+    <meta property="og:image" content="http://{{request.get_host}}{{collection.banner.get__blurred__banner }}"/>
+    {% else %}  
+    <meta property="twitter:image" content="http://{{request.get_host}}{{collection.cover.get__blurred__banner }}"/>
+    <meta property="og:image" content="http://{{request.get_host}}{{collection.cover.get__blurred__banner }}"/>
+    {% endif %}
+    
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:title" content="{{ collection.short_label }}" />
+    <meta property="twitter:description" content="{{collection.dc.content.description}}" />
+    <meta property="twitter:url" content="{{request.build_absolute_uri}}" />
+{% endblock %}
+
 {% block body_attrs %} typeof="schema:CollectionPage"{% endblock %}
 
 {% block content %}
