--- a/readux/collection/templates/collection/browse.html
+++ b/readux/collection/templates/collection/browse.html
@@ -5,13 +5,20 @@
 
 {% block metadata %}
   {{block.super}}
+
+  <meta property="og:title" content="Readux Collections"/>
+  <meta itemprop="og:headline" content="Readux Collections" />
+  
+
   <meta name="twitter:card" content="gallery">
   <meta name="twitter:title" content="Readux Collections">
   <meta name="twitter:description" content="Digital archives grouped by topic or assortment">
 
-  {# TODO: build absolute url elsewhere #}
   {% for item in meta_covers %}
-    <meta name="twitter:image{{forloop.counter0}}:src" content="{{request.build_absolute_uri}}{{ item.get__thumbnail }}">
+    {% if forloop.first %}
+    <meta property="og:image" content="{{site_root}}{{ item.get__thumbnail }}"/>
+    {% endif %}
+    <meta name="twitter:image{{forloop.counter0}}:src" content="{{site_root}}{{ item.get__thumbnail }}">
   {% endfor %}
 
 {% endblock %}
