--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -80,7 +80,7 @@
 
 </header>
 <div class="container">
-    <section class="collection-section">
+    <section class="volume-list">
       {% if items.paginator.count %}
         <h2 class="section-heading">{{ items.paginator.count|intcomma }} volume{{ items.paginator.count|pluralize }} in this collection</h2>
         <p class="lead">
