--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -79,16 +79,17 @@
                 {% if page.tei.exists %}
                 <div id="ocr-page">
                     <div class="ocr-content">
-                    {# TODO: consider grouping by line and setting font-size that way #}
-                    {# this might also make highlighting look more natural #}
-                    {% for zone in page.tei.content.word_zones %}
-                        <div class="ocr-zone" style="display:block;position:absolute;{{ zone|zone_style:scale }}">{{ zone.text }}</div>
+                    {% for line in page.tei.content.lines %}
+                        <div class="ocr-line" style="{{ line|zone_style:scale }}">
+                            {% for zone in line.word_zones %}
+                                <div class="ocr-zone" style="{{ zone|zone_style:scale }}">{{ zone.text }}</div>
+                            {% endfor %}
+                        </div>
                     {% endfor %}
                 </div>
                 </div>
                 {% endif %}
                 <div id="page-image"><img src="{% url 'books:page-image' page.pid %}"/></div>
-
             </div>
         </div>
 
