--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -825,7 +825,7 @@ header#page-bg .collection-image-info.collasped .info{
 /* styles for overlaying ocr text over page image */
 #ocr-page {
     position: absolute;
-    width: 80%;
+    width: 858px;
     left: 10%;
     z-index: 2;
     text-align: center;
@@ -839,16 +839,23 @@ header#page-bg .collection-image-info.collasped .info{
 /* FIXME: needs to be positioned exactly the same way the page images is */
 .ocr-content {
     position: relative;
-    margin-left: 5%; /* FIXME: this is dependent on browser width */;
+    margin: auto;
+    /*margin-left: 10%;  FIXME: this is dependent on browser width ;*/
  }
-.ocr-zone {
+.ocr-line {
     display: block;
     position: absolute;
     padding: 0;
     margin: 0;
     /* make text transparent */
-    color: #000;   /* Fallback for older browsers */
+    color: #000;    /* Fallback for older browsers */
     color: rgba(0, 0, 0, 0.0);
+}
+.ocr-zone {
+    position: relative;
+    display: inline;
+    padding: 0;
+    margin: 0;
 }
 /* highlighted text style, for browsers that support it (Webkit, Mozilla) */
 .ocr-content ::selection {
