--- a/readux/books/templates/books/snippets/volume_header.html
+++ b/readux/books/templates/books/snippets/volume_header.html
@@ -50,7 +50,7 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
             </div><!-- /input-group -->
             <span class="help-block">
                 {{ form.keyword.help_text }}
-                <p class="text-warning">Note: searching uncorrected OCR text content.</sp>
+                <p class="text-warning">Note: searching uncorrected OCR text content.</p>
             </span>
           </form>
         </div>
